Add alt text for article pictures

--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,7 @@
       <section class="article-grid">
         <a href="#" class="article article--featured">
           <div class="article-picture">
-            <img src="article-images/article_picture_01.jpg" />
+            <img src="article-images/article_picture_01.jpg" alt="Hiking cat Wildfred outside local hiking club headquarters" />
           </div>
           <div class="article-content">
             <h1>Meet Wilfred, the cat who simply can't get enough of hiking</h1>
@@ -41,7 +41,7 @@
 
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_02.jpg" />
+            <img src="article-images/article_picture_02.jpg" alt="Catfluencer Mimi in round sunglasses" />
           </div>
           <div class="article-content">
             <h1>Hottest eyewear trends</h1>
@@ -50,7 +50,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_03.jpg" />
+            <img src="article-images/article_picture_03.jpg" alt="Very cute kittens Arthur and Lisa posing shyly" />
           </div>
           <div class="article-content">
             <h1>Local kittens cute beyond comprehesion</h1>
@@ -59,7 +59,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_04.jpg" />
+            <img src="article-images/article_picture_04.jpg" alt="A cat letting their owner know it's time for cuddles by being extra cute" />
           </div>
           <div class="article-content">
             <h1>*kitty eyes* does work</h1>
@@ -68,7 +68,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_05.jpg" />
+            <img src="article-images/article_picture_05.jpg" alt="Kiki with her new toy, looking dissapointed" />
           </div>
           <div class="article-content">
             <h1>New toy underwhleming</h1>
@@ -77,7 +77,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_06.jpg" />
+            <img src="article-images/article_picture_06.jpg" alt="Cat striking a yoga pose" />
           </div>
           <div class="article-content">
             <h1>Happy backs, ahoy!</h1>
@@ -86,7 +86,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_07.jpg" />
+            <img src="article-images/article_picture_07.jpg" alt="Lily inside a wooden basket with a somewhat tired look on her face" />
           </div>
           <div class="article-content">
             <h1>Wooden basket ride was "ok"</h1>
@@ -95,7 +95,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_08.jpg" />
+            <img src="article-images/article_picture_08.jpg" alt="A cat on their back in a cardboard box" />
           </div>
           <div class="article-content">
             <h1>Our love for cardboard boxes</h1>
@@ -104,7 +104,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_09.jpg" />
+            <img src="article-images/article_picture_09.jpg" alt="Cat doing a double facepalm" />
           </div>
           <div class="article-content">
             <h1>Food prices on a rise</h1>
