HTML and CSS linting

--- a/code/index.html
+++ b/code/index.html
@@ -5,10 +5,16 @@
     <title>Catnews</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/123ae26214.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@500&family=Libre+Caslon+Text:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <script
+      src="https://kit.fontawesome.com/123ae26214.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@500&family=Libre+Caslon+Text:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -20,95 +26,154 @@
           <span class="site-name">Catnews</span>
         </a>
         <nav class="main-menu">
-            <a href="#" class="main-menu-item">Home</a>
-            <a href="#" class="main-menu-item">Culture</a>
-            <a href="#" class="main-menu-item">Lifestyle</a>
-            <a href="#" class="main-menu-item">Adventure</a>
+          <a href="#" class="main-menu-item">Home</a>
+          <a href="#" class="main-menu-item">Culture</a>
+          <a href="#" class="main-menu-item">Lifestyle</a>
+          <a href="#" class="main-menu-item">Adventure</a>
         </nav>
       </header>
 
-      
       <section class="article-grid">
         <a href="#" class="article article--featured">
           <div class="article-picture">
-            <img src="article-images/article_picture_01.jpg" alt="Hiking cat Wildfred outside local hiking club headquarters" />
+            <img
+              src="article-images/article_picture_01.jpg"
+              alt="Hiking cat Wildfred outside local hiking club headquarters"
+            />
           </div>
           <div class="article-content">
             <h1>Meet Wilfred, the cat who simply can't get enough of hiking</h1>
-            <p>Having climbed three mountains, a hill and two trees so far this summer, he's already planning his next adventure - the local fishing harbour. Come along as we dive deeper into his passion for long walks.</p>
+            <p>
+              Having climbed three mountains, a hill and two trees so far this
+              summer, he's already planning his next adventure - the local
+              fishing harbour. Come along as we dive deeper into his passion for
+              long walks.
+            </p>
           </div>
         </a>
 
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_02.jpg" alt="Catfluencer Mimi in round sunglasses" />
+            <img
+              src="article-images/article_picture_02.jpg"
+              alt="Catfluencer Mimi in round sunglasses"
+            />
           </div>
           <div class="article-content">
             <h1>Hottest eyewear trends</h1>
-            <p>This season, round sunglasses are making a comeback. Catfluencer Mimi shares her favourites!</p>
+            <p>
+              This season, round sunglasses are making a comeback. Catfluencer
+              Mimi shares her favourites!
+            </p>
           </div>
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_03.jpg" alt="Very cute kittens Arthur and Lisa posing shyly" />
+            <img
+              src="article-images/article_picture_03.jpg"
+              alt="Very cute kittens Arthur and Lisa posing shyly"
+            />
           </div>
           <div class="article-content">
             <h1>Local kittens cute beyond comprehesion</h1>
-            <p>Arthur and Lisa have have since their birth accounted for 97% of their owners camera roll.</p>
+            <p>
+              Arthur and Lisa have have since their birth accounted for 97% of
+              their owners camera roll.
+            </p>
           </div>
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_04.jpg" alt="A cat letting their owner know it's time for cuddles by being extra cute" />
+            <img
+              src="article-images/article_picture_04.jpg"
+              alt="A cat letting their owner know it's time for cuddles by being extra cute"
+            />
           </div>
           <div class="article-content">
             <h1>*kitty eyes* does work</h1>
-            <p>A recent study suggests that the most effective ways of convincing your human to drop everything and give you cuddles is to be approximately 5% cuter than one usually is.</p>
+            <p>
+              A recent study suggests that the most effective ways of convincing
+              your human to drop everything and give you cuddles is to be
+              approximately 5% cuter than one usually is.
+            </p>
           </div>
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_05.jpg" alt="Kiki with her new toy, looking dissapointed" />
+            <img
+              src="article-images/article_picture_05.jpg"
+              alt="Kiki with her new toy, looking dissapointed"
+            />
           </div>
           <div class="article-content">
             <h1>New toy underwhleming</h1>
-            <p>"This green-orange color frog toy is nowhere near as fun as the blue one I had before". Owners have promised to do better next time, but 5-year old Kiki still isn't impressed.</p>
+            <p>
+              "This green-orange color frog toy is nowhere near as fun as the
+              blue one I had before". Owners have promised to do better next
+              time, but 5-year old Kiki still isn't impressed.
+            </p>
           </div>
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_06.jpg" alt="Cat striking a yoga pose" />
+            <img
+              src="article-images/article_picture_06.jpg"
+              alt="Cat striking a yoga pose"
+            />
           </div>
           <div class="article-content">
             <h1>Happy backs, ahoy!</h1>
-            <p>According to yoga experts, these are the poses that will ensure your back stays flexible, and could even cure an aching back.</p>
+            <p>
+              According to yoga experts, these are the poses that will ensure
+              your back stays flexible, and could even cure an aching back.
+            </p>
           </div>
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_07.jpg" alt="Lily inside a wooden basket with a somewhat tired look on her face" />
+            <img
+              src="article-images/article_picture_07.jpg"
+              alt="Lily inside a wooden basket with a somewhat tired look on her face"
+            />
           </div>
           <div class="article-content">
             <h1>Wooden basket ride was "ok"</h1>
-            <p>Lily much prefers being carried around in paper shopping bags, she told Catnews shortly after her first basket ride.</p>
+            <p>
+              Lily much prefers being carried around in paper shopping bags, she
+              told Catnews shortly after her first basket ride.
+            </p>
           </div>
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_08.jpg" alt="A cat on their back in a cardboard box" />
+            <img
+              src="article-images/article_picture_08.jpg"
+              alt="A cat on their back in a cardboard box"
+            />
           </div>
           <div class="article-content">
             <h1>Our love for cardboard boxes</h1>
-            <p>What makes a cardboard box truly great? We ask five readers what they look at when they decide if a cardboard box is mega interesting, or not so at all.</p>
+            <p>
+              What makes a cardboard box truly great? We ask five readers what
+              they look at when they decide if a cardboard box is mega
+              interesting, or not so at all.
+            </p>
           </div>
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="article-images/article_picture_09.jpg" alt="Cat doing a double facepalm" />
+            <img
+              src="article-images/article_picture_09.jpg"
+              alt="Cat doing a double facepalm"
+            />
           </div>
           <div class="article-content">
             <h1>Food prices on a rise</h1>
-            <p>According to researchers at CFPI (Cat Food Price Index), food prices are likely to increase over the next six months due to instability in the supply chain.</p>
+            <p>
+              According to researchers at CFPI (Cat Food Price Index), food
+              prices are likely to increase over the next six months due to
+              instability in the supply chain.
+            </p>
           </div>
         </a>
       </section>
