--- a/code/index.html
+++ b/code/index.html
@@ -42,7 +42,9 @@
             />
           </div>
           <div class="article-content">
-            <h1>Meet Wilfred, the cat who simply can't get enough of hiking</h1>
+            <h1>
+              Meet Wilfred, the cat who simply cannot get enough of hiking
+            </h1>
             <p>
               Having climbed three mountains, a hill and two trees so far this
               summer, he's already planning his next adventure - the local
