picture and letter changes

--- a/new code/index.html
+++ b/new code/index.html
@@ -11,19 +11,7 @@
 
   <body>
     <header>
-      <h2>Juicy <span>knowledge</span></h2>
-      <!-- Some kind of logo and navbar -->
-      <div class="nav-links-desktop">
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact us</a></li>
-          </ul>
-        </nav>
-      </div>
+      <!-- Dropdown for  mobile & tablet -->
       <div class="dropdown-tablet-mobile">
         <button class="dropbtn" onclick="myDropdown()"></button>
         <div class="dropdown-content" id="dropdown-id">
@@ -36,6 +24,19 @@
         </div>
       </div>
       <button class="subscribe" type="button">Subscribe</button>
+      <!-- Nav bar for computer -->
+      <h2>Juicy <span>knowledge</span></h2>
+      <div class="nav-links-desktop">
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <section class="grid-parent">
@@ -49,8 +50,8 @@
           <h1>Welcome to the Juicy news!</h1>
           <p>
             This news site is just a sneak peak into the fantastic tools we will
-            master by January 2023! The knowledge will be juicy and curiosity
-            close to unstoppable. Get ready we are starting!
+            master by January 2023! The knowledge will be juicy and the
+            curiosity close to unstoppable. Get ready we are starting!
           </p>
           <button class="read-more" type="button">Read more</button>
         </div>
