made changes regarding padding, the tiny news section, images etc.

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
     <header class="logo-header">
      <div class="wrapper">
       <div class="top image">
-        <a href="http://www.google.com" class="logo"><img src="rutor.jpg" alt="logo" />
+        <a>href="http://www.google.com"><img class="logo-image" src="logo_illustration.png" alt="logo" />
         </a>
       </div>
       <div class="top text">
@@ -43,7 +43,19 @@
       <!-- The big news content -->
       <div class="big-news news-pic"><img src="https://live.staticflickr.com/7426/13158484383_18c5eebd32_b.jpg"></div> <!-- theese divs are made for flexbox-->
       <div class="big-news news-text"><h1>The 50 Best TV Shows on Netflix Right Now
-      </h1><p>Nullam sit amet eros mattis, rutrum sapien in,  sem nisi mollis nulla, sit amet convallis ipsum tellus non lacus.</p></div>
+      </h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Vestibulum dignissim sapien a sagittis cursus. Vestibulum tristique accumsan velit, 
+          tincidunt volutpat neque feugiat id. Suspendisse accumsan ante id dui lacinia, 
+          id ultrices quam varius. Nunc consequat condimentum urna. Aliquam nec diam luctus, 
+          ullamcorper lectus a, imperdiet quam. Nulla sed porta eros, ut luctus lorem. 
+          Ut scelerisque ex a semper condimentum. Curabitur ac mi vitae tortor porttitor convallis. 
+          Mauris accumsan odio est, eu ultrices lorem maximus a. Nam quis eros eu tortor malesuada 
+          auctor. Cras condimentum quis nunc eu ultricies. Nullam in risus sodales, finibus dolor 
+          vitae, consequat sem. Etiam non diam sed enim laoreet luctus in nec augue. Suspendisse 
+          mollis commodo sapien ut blandit. Morbi volutpat venenatis quam, 
+          et lobortis quam auctor eu. <a href="new site">Read more..</a>
+        </p></div>
       <!-- not used right now <div class="big-news third"></div>
       <div class="big-news fourth"></div>
       <div class="big-news fifth"></div> not yet used-->
@@ -55,12 +67,23 @@
 
       <div class="tiny-news-wrapper">
         <!-- The smaller news  -->
-       <div class="tiny-news">1</div> <!-- theese divs are made for flexbox-->
+       <div class="tiny-news">
+<!--         <img class="tiny-news-image" src="https://images.pexels.com/photos/351265/pexels-photo-351265.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+ -->       </div>
+
        <div class="tiny-news"><p>some random small text</p></div>
-       <div class="tiny-news">3</div>
-       <div class="tiny-news">4</div>
+       <div class="tiny-news">
+<!--         <img class="tiny-news-image" src="https://images.pexels.com/photos/6976092/pexels-photo-6976092.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+ -->      </div>
+       <div class="tiny-news">4  </div>
        <div class="tiny-news">5</div>
        <div class="tiny-news">6</div>
+       <div class="tiny-news">7 </div>
+       <div class="tiny-news">8</div>
+       <div class="tiny-news">9</div>
+       <div class="tiny-news">10 </div>
+       <div class="tiny-news">11</div>
+       <div class="tiny-news">12</div> 
       </div>
     </section>
   </body>
