changed colors, fonts, fixed the logo etc

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
     <header class="logo-header">
      <div class="wrapper">
       <div class="top image">
-        <a>href="http://www.google.com"><img class="logo-image" src="logo_illustration.png" alt="logo" />
+        <a href="http://www.google.com"><img class="logo-image" src="logo_illustration.png" alt="logo" />
         </a>
       </div>
       <div class="top text">
