--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,115 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We.love.DIY</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
+    <script src="https://kit.fontawesome.com/f193f020cd.js" crossorigin="anonymous"></script>
+    <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
+    </head>
   <body>
+
+  <!-- Header and navbar -->
+
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="logo">
+        <i class="fa-solid fa-fill-drip"></i>
+        </div>
+      <div class="name">
+        <a href="index.html">We.Love.DIY</a>
+        </div>
+      <div class="menu">
+        <li class="menu-item"><a href="index.html">Home</a></li>
+        <li class="menu-item"><a href="index.html">Inspiration</a></li> 
+        <li class="menu-item"><a href="index.html">Contact</a></li>
+        <li class="menu-item"><a href="index.html">About</a></li>
+      </div>
+      <form class="search-field">
+        <input class="search-input" type="text" placeholder="Search..."></input>
+        <button class="search-button" type="submit"><i class="fas fa-search"></i></button>
+      </form>
+      </div>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+
+  <!-- The big news --> 
+
+    <section class="big-news"> 
+      <div class="big-news-article">
+        <div class="big-news-image"> 
+          <img class="big-image" src="https://images.unsplash.com/photo-1527359443443-84a48aec73d2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" alt="patio">
+        </div>
+        <div class="big-news-text">
+          <h3 class="big-headline"><a href="index.html">HOW TO BUILD YOUR OWN PATIO</a></h3>
+          <p>Outdoor season is here and we all love a nice patio. 
+          But how do you make one on your own on a budget? 
+          Get free instructions and tips on how to build it yourself
+          and enjoy your time ourdoors.</p>
+          <h class="hidden-paragraph"> 
+            xxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxx xxxxxxxxx
+            xxxx xxxxxxxxx xxxxx xxxx xxxxxxx
+            xxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxx xxxxx xxx xxxxxxx xxxx
+            xxxx xxxxxxxxx xxxxx</h>
+          <button class="desktop-button"><a href="index.html">Download instructions in pdf</a></button>
+        </div>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+
+  <!-- The other small news  -->
+
+    <section class="small-news-grid">
+      <div class="small-item">
+        <img class="small-images" src="images/custom-closets.jpg" alt="custom-closets">
+        <h5><a href="index.html">Custom closets</a></h5>
+        <p>xxxxx xx xxx xxxxx</p>
+      </div>
+      <div class="small-item">
+        <img class="small-images" src="images/built-in-bookcase.jpg" alt="built-in-bookcase">
+        <h5><a href="index.html">Built-in bookshelf</a></h5>
+        <p>xxxxx xx xxx xxxxx</p>
+      </div>
+      <div class="small-item">
+          <img class="small-images" src="images/kitchen-countertop.jpg" alt="kitchen-countertop">
+          <h5><a href="index.html">Kitchen countertop makeover</a></h5>
+          <p>xxxxx xx xxx xxxxx</p>
+      </div>
+      <div class="small-item">
+          <img class="small-images" src="images/panel-headboard.JPG" alt="panel-headbord">
+          <h5><a href="index.html">Panel headboard</a></h5>
+          <p>xxxxx xx xxx xxxxx</p>
+      </div>
+      <div class="small-item">
+          <img class="small-images" src="images/desk-chair.JPG"alt="desk-chair">
+          <h5><a href="index.html">Desk chair makeover</a></h5>
+          <p>xxxxx xx xxx xxxxx</p>
+      </div>
+      <div class="small-item">
+        <img class="small-images" src="images/ikea-dresser.JPG" alt="ikea-dresser">
+        <h5><a href="index.html">Ikea dresser hacks</a></h5>
+        <p>xxxxx xx xxx xxxxx</p>
+      </div>
+      <div class="small-item">
+        <img class="small-images" src="images/kids-playroom.jpg" alt="kids-playroom">
+        <h5><a href="index.html">Kids playroom hack</a></h5>
+        <p>xxxxx xx xxx xxxxx</p>
+      </div>
+      <div class="small-item">
+        <img class="small-images" src="images/diy-tools.jpg" alt="diy-tools">
+        <h5><a href="index.html">DIY tools to have at home</a></h5>
+        <p>xxxxx xx xxx xxxxx</p>
+      </div>
     </section>
-  </body>
+
+<footer>
+  <div class="logo">We.love.diy</div>
+  <div class="social">
+  <a href=#facebook><i class="fa-brands fa-square-facebook"></i></a>
+  <a href=#instagram><i class="fa-brands fa-instagram"></i></a>
+  </div>
+  <div class="email-info">info@welovediy.com</div>
+  <div class="newsletter"><a href=#newsletter>Sign up for our newsletter</a></div>
+</footer>
+
+</body>
 </html>
