--- a/code/index.html
+++ b/code/index.html
@@ -106,7 +106,7 @@
             />
           </div>
           <div class="article-content">
-            <h1>New toy underwhleming</h1>
+            <h1>New toy underwhelming</h1>
             <p>
               "This green-orange color frog toy is nowhere near as fun as the
               blue one I had before". Owners have promised to do better next
