Fix grammar and spelling in articles

--- a/code/index.html
+++ b/code/index.html
@@ -46,8 +46,9 @@
             <p>
               Having climbed three mountains, a hill and two trees so far this
               summer, he's already planning his next adventure - the local
-              fishing harbour. Come along as we dive deeper into his passion for
-              long walks.
+              fishing harbour. Come along as find out how his lifelong passion
+              for hikes began, and what his best tips are for those about to
+              embark on their first trek.
             </p>
           </div>
         </a>
@@ -77,8 +78,8 @@
           <div class="article-content">
             <h1>Local kittens cute beyond comprehesion</h1>
             <p>
-              Arthur and Lisa have have since their birth accounted for 97% of
-              their owners camera roll.
+              Arthur and Lisa have have since their arrival accounted for a
+              staggering 99% of their owners camera roll.
             </p>
           </div>
         </a>
@@ -109,8 +110,8 @@
             <h1>New toy underwhelming</h1>
             <p>
               "This green-orange color frog toy is nowhere near as fun as the
-              blue one I had before". Owners have promised to do better next
-              time, but 5-year old Kiki still isn't impressed.
+              blue one I had before." Owners have promised to do better next
+              time, but 5-year old Kiki still isn't too amused.
             </p>
           </div>
         </a>
@@ -125,7 +126,8 @@
             <h1>Happy backs, ahoy!</h1>
             <p>
               According to yoga experts, these are the poses that will ensure
-              your back stays flexible, and could even cure an aching back.
+              your back stays flexible, and could even help cure the worst of
+              backaches.
             </p>
           </div>
         </a>
@@ -152,7 +154,7 @@
             />
           </div>
           <div class="article-content">
-            <h1>Our love for cardboard boxes</h1>
+            <h1>Beloved cardboard boxes</h1>
             <p>
               What makes a cardboard box truly great? We ask five readers what
               they look at when they decide if a cardboard box is mega
@@ -172,7 +174,7 @@
             <p>
               According to researchers at CFPI (Cat Food Price Index), food
               prices are likely to increase over the next six months due to
-              instability in the supply chain.
+              global supply chain disruptions.
             </p>
           </div>
         </a>
