--- a/code/index.html
+++ b/code/index.html
@@ -26,7 +26,7 @@
     <section class="big-news">
 
     <div class="flex-child one">
-        <img src="C:\Users\there\Desktop\myNewssite\project-news-site\code\Images\stockholm.jpg" alt="Picture of Stockholm"/>
+        <img src="./stockholm.jpg" alt="Picture of Stockholm"/>
     </div>
 
     <div class="flex-child two">
