--- a/code/index.html
+++ b/code/index.html
@@ -50,7 +50,7 @@
     
     <div class="cell-one">
     <article>
-        <img src="C:\Users\there\Desktop\myNewssite\project-news-site\code\Images\vegetable-skewer.jpg" alt="Picture of vegetables"/>
+        <img src="./vegetable-skewer.jpg" alt="Picture of vegetables"/>
         <h2>Summer barbecue</h2>
         <p>This summer, the Argentinian chef Francis Mallmann, a legend in live-fire cookery, published Green Fire, <br> 
             a book exploring “extraordinary” ways to grill vegetables.<br> 
@@ -61,7 +61,7 @@
 
     <div class="cell-two">
     <article>
-        <img src="C:\Users\there\Desktop\myNewssite\project-news-site\code\Images\firefighter.jpg" alt="Picture of firefighter"/>
+        <img src="./firefighter.jpg" alt="Picture of firefighter"/>
         <h2>Climate crisis</h2>
         <p>Floods, storms and heatwaves are a direct product of the climate crisis that is a fact, <br>
             so where is the action? As Guardian analysis reveals that human-caused global heating <br> 
@@ -73,7 +73,7 @@
     
     <div class="cell-three">
     <article>
-        <img src="C:\Users\there\Desktop\myNewssite\project-news-site\code\Images\British museum parthenon.jpg" alt="Picture of Parthenon marble"/>
+        <img src="./British museum parthenon.jpg" alt="Picture of Parthenon marble"/>
         <h2>Is British Museum's stance shifting on Parthenon marbles return?</h2>
         <p>A glance at the social media channels of the British Museum underlines why, when it comes to the long-disputed Acropolis sculptures,<br> 
             it is so eager to “change the temperature of the debate”.<br>
@@ -86,7 +86,7 @@
     <div class="cell-four">
 
     <article>
-        <img src="C:\Users\there\Desktop\myNewssite\project-news-site\code\Images\Contemplating.jpg" alt="Picture of girl contemplating"/>
+        <img src="./Contemplating.jpg" alt="Picture of girl contemplating"/>
         <h2>Contemplation can help problem-solving<br>
             and boost creativity, study claims</h2>
         <p>Losing oneself in one's thoughts or letting the mind wander is an underrated<br> 
