--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
 
     <header>
       <!-- Some kind of logo and navbar -->
-      <img src="C:\Users\there\Desktop\myNewssite\project-news-site\code\logo.svg" alt="Logo">
+      <img src="./logo.svg" alt="Logo">
       <h1 class="first-heading">YESTERDAYS NEWS</h1>
     </header>
 
