--- a/code/index.html
+++ b/code/index.html
@@ -15,6 +15,7 @@
           <a href="index.html" class="active">Home</a>
           <a href="#">Parks</a>
           <a href="#">Camper</a>
+          <a href="#">Photo winners</a>
           <a href="#">Contact</a>
          </nav> 
 
@@ -26,7 +27,9 @@
         <img src="yellowstone.jpg" alt="yellowstone">
       </div>
       <div class="flex-child news-button">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque expedita fugiat laboriosam, eligendi reprehenderit voluptatum eveniet. Repellendus ducimus unde, nisi obcaecati iusto debitis voluptate quibusdam! Dicta nam delectus voluptatem rem.</p>
+        <h2>National park photo competition 2022</h2>
+        <h3>Deadline: 1 December 2022</h3>
+        <p>Do not miss this rare opportunity to take part in one of the most prestigious annual photo contests.</p>
         <button>Read more</button>
       </div>
     </section>
@@ -35,51 +38,56 @@
       <!-- The other news  -->
       <div class="news-grid-child">
         <img src="buffalo.jpg" alt="A buffalo">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <h3>Three people attacked by bison in Yellowstone</h3>
+        <p>6th of Aug 2022: So far this year three people has been attacked by a bison in yellowstone.</p>
       </div>
       <div class="news-grid-child">
         <img src="smoke.jpg" alt="smoke">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <h3>A new Geyser found in Yellowstone</h3>
+        <p>A new geyser was found in Yellowstone the 5th of Aug 2022. It is one of the biggest ever found. Read to learn more...</p>
       </div>
       <div class="news-grid-child">
         <img src="grand-canyon.jpg" alt="Grand Canyon">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <h3>Grand Canyon</h3>
+        <h4>Face Masks Are Required Indoors (CDC High Community Levels) Thursday, August 4, 2022</h4>
+        <p>
+          Alert 3, Severity danger, Face Masks Are Required Indoors (CDC High Community Levels).
+          Face masks are required for all individuals over the age of 2 years (regardless of vaccinations status) in park buildings, and on public transportation. Please bring masks with you for your family or group.</p>
       </div>
       <div class="news-grid-child">
         <img src="yosemite-clouds.jpg" alt="Cloudy Yosemite">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <h3>No sun in yosemite for a whole month</h3>
+        <p>Yosemite has been cloudy for a whole month. Here's why.</p>
       </div>
       <div class="news-grid-child">
-        <img src="" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <img src="mount-rushmore.jpg" alt="Mount Rushmore">
+        <h3>Mount Rushmore National Memorial closed due to severe weather</h3>
+        <p>Mount Rushmore National Memorial closed down due to severe weather the 22nd of June 2022. The park will reopen for visitors the 25th of June.</p>
       </div>
       <div class="news-grid-child">
-        <img src="" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <img src="baby-bear.jpg" alt="A baby bear">
+        <h3>Baby bear spotted in Pikes peak 30th of June 2022</h3>
+        <p>A baby bear has been spotted close to Pikes peak in the end June 2022. Be mommy bear aware!</p>
       </div>
       <div class="news-grid-child">
-        <img src="" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <img src="yellowstone-hot-spring.jpg" alt="Hot spring">
+        <h3>Floodings in Yellowstone</h3>
+        <p>An unprecedented flood hit Yellowstone National Park on June 13, 2022. The catastrophic event was caused by a combination of unusually heavy rains and rapid snowmelt. The high and fast water flows destroyed bridges and swept away entire roadways, leaving communities and homes isolated.</p>
       </div>
       <div class="news-grid-child">
-        <img src="" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <img src="stars.jpg" alt="stars">
+        <h3>The stars and the National Parks</h3>
+        <p>Read about the best places in US National Parks to star watch.</p>
       </div>
       <div class="news-grid-child">
-        <img src="" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <img src="niagara-falls.jpg" alt="Niagara falls">
+        <h3>Niagara Falls rainbow lights</h3>
+        <p>Hundreds of LED lights are housed in three locations across the Niagara Gorge in Niagara Falls, Ontario. Together, these lights work to create a breathtaking view not to be missed, and are illuminated every night of the year beginning at dusk.</p>
       </div>
       <div class="news-grid-child">
-        <img src="" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
-      </div>
-      <div class="news-grid-child">
-        <img src="" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
-      </div>
-      <div class="news-grid-child">
-        <img src="" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+        <img src="mountain.jpg" alt="Snowy mountain">
+        <h3>Rocky Mountain ski resort season 2021/2022 cancelled</h3>
+        <p>The ski season of 2021/2022 is yet again cancelled due to high covid community levels.</p>
       </div>
     </section>
 
